--- a/md-vinyl-web/package.json
+++ b/md-vinyl-web/package.json
@@ -16,6 +16,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-player": "^3.4.0",
+    "react-youtube": "^10.1.0",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
@@ -25,9 +26,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
