--- a/md-vinyl-web/package.json
+++ b/md-vinyl-web/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.25",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.555.0",
-    "next": "16.0.6",
+    "next": "^16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-player": "^3.4.0",
@@ -22,15 +22,14 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
